--- a/requirements.txt
+++ b/requirements.txt
@@ -1,155 +1,108 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-anyio==3.3.0
+aiohttp==3.8.3
+aiosignal==1.3.1
+anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.8
-async-generator==1.10
 async-timeout==4.0.2
 attrs==22.1.0
-awscli==1.22.37
-Babel==2.9.1
 backcall==0.2.0
 base58==2.1.1
 beautifulsoup4==4.11.1
 bitarray==2.6.0
 bleach==5.0.1
-botocore==1.23.37
-bs4==0.0.1
-certifi==2022.9.14
+certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
-colorama==0.4.5
-cryptography==37.0.4
-cycler==0.11.0
+colorama==0.4.6
 cytoolz==0.12.0
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
-docutils==0.15.2
 entrypoints==0.4
 eth-abi==2.2.0
 eth-account==0.5.9
-eth-hash==0.5.0
+eth-hash==0.3.3
 eth-keyfile==0.5.1
 eth-keys==0.3.4
 eth-rlp==0.2.1
 eth-typing==2.3.0
-eth-utils==1.9.5
-executing==1.0.0
-fastjsonschema==2.16.1
-fonttools==4.34.4
-frozenlist==1.3.1
-future==0.18.2
-h11==0.13.0
+eth-utils==1.10.0
+executing==1.1.1
+fastjsonschema==2.16.2
+frozenlist==1.3.3
 hexbytes==0.3.0
 idna==3.4
-importlib-metadata==4.12.0
 ipfshttpclient==0.8.0a2
-ipykernel==6.15.3
+ipykernel==6.16.2
 ipython==8.5.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.2
 jedi==0.18.1
 Jinja2==3.1.2
-jmespath==0.10.0
-json5==0.9.6
 jsonschema==4.16.0
 jupyter==1.0.0
 jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyter-server==1.10.2
-jupyter_client==7.3.5
-jupyterlab==3.1.9
+jupyter-server==1.21.0
+jupyter_client==7.4.4
+jupyter_core==4.11.2
 jupyterlab-pygments==0.2.2
-jupyterlab-server==2.7.2
 jupyterlab-widgets==3.0.3
-jupyterthemes==0.20.0
-kiwisolver==1.4.4
-lesscpy==0.15.0
 lru-dict==1.1.8
-lxml==4.9.1
 MarkupSafe==2.1.1
-matplotlib==3.5.2
 matplotlib-inline==0.1.6
 mistune==2.0.4
-mnemonic==0.20
 multiaddr==0.0.9
 multidict==6.0.2
-nbclassic==0.3.1
-nbclient==0.6.8
-nbconvert==7.0.0
-nbformat==5.5.0
-nest-asyncio==1.5.5
+nbclassic==0.4.5
+nbclient==0.7.0
+nbconvert==7.2.3
+nbformat==5.7.0
+nest-asyncio==1.5.6
 netaddr==0.8.0
-notebook==6.4.12
-numpy==1.23.3
-osquery==3.0.6
-outcome==1.2.0
+notebook==6.5.1
+notebook_shim==0.2.0
+numpy==1.23.4
 packaging==21.3
-pandas==1.4.1
 pandocfilters==1.5.0
 parsimonious==0.8.1
 parso==0.8.3
 pickleshare==0.7.5
-Pillow==9.2.0
-ply==3.11
-prometheus-client==0.14.1
+prometheus-client==0.15.0
 prompt-toolkit==3.0.31
-protobuf==3.20.2
-psutil==5.9.2
-psycopg2==2.9.1
+protobuf==3.19.5
+psutil==5.9.3
 pure-eval==0.2.2
-pyasn1==0.4.8
 pycparser==2.21
 pycryptodome==3.15.0
 Pygments==2.13.0
-pyOpenSSL==22.0.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
-PySocks==1.7.1
 python-dateutil==2.8.2
-python-dotenv==0.20.0
-pytz==2021.1
+pytz==2022.5
 pywin32==304
-pywinpty==2.0.8
-PyYAML==5.4.1
-pyzmq==24.0.0
+pywinpty==2.0.9
+pyzmq==24.0.1
 qtconsole==5.3.2
-QtPy==2.2.0
+QtPy==2.2.1
 requests==2.28.1
-requests-unixsocket==0.2.0
 rlp==2.0.1
-rsa==4.7.2
-s3transfer==0.5.0
-selenium==4.3.0
 Send2Trash==1.8.0
 six==1.16.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
+sniffio==1.3.0
 soupsieve==2.3.2.post1
-stack-data==0.5.0
-terminado==0.15.0
-testpath==0.5.0
-thrift==0.11.0
-timeout-decorator==0.5.0
-tinycss2==1.1.1
+stack-data==0.5.1
+terminado==0.17.0
+tinycss2==1.2.1
 toolz==0.12.0
 tornado==6.2
-tqdm==4.64.0
-traitlets==5.4.0
-trio==0.21.0
-trio-websocket==0.9.2
+traitlets==5.5.0
 urllib3==1.26.12
 varint==1.0.2
 wcwidth==0.2.5
-web3==5.30.0
-webdriver-manager==3.8.3
+web3==5.31.1
 webencodings==0.5.1
-websocket-client==1.2.1
+websocket-client==1.4.1
 websockets==9.1
 widgetsnbextension==4.0.3
-wsproto==1.1.0
 yarl==1.8.1
-zipp==3.8.1
-zope.interface==5.4.0
